# QueryGPT

./: chat.py  example1.sql  indexing copy.py  indexing.py  main.py  output.json  pyproject.toml  schema.sql
